; ModuleID = '/home/carl/AnghaBench/Cinder/src/linebreak/extr_linebreak.c_get_char_lb_class_lang.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/linebreak/extr_linebreak.c_get_char_lb_class_lang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.LineBreakProperties = type { i32 }

@LBP_XX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.LineBreakProperties*)* @get_char_lb_class_lang to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_char_lb_class_lang(i32 %0, %struct.LineBreakProperties* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.LineBreakProperties*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.LineBreakProperties* %1, %struct.LineBreakProperties** %5, align 8
  %7 = load %struct.LineBreakProperties*, %struct.LineBreakProperties** %5, align 8
  %8 = icmp ne %struct.LineBreakProperties* %7, null
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.LineBreakProperties*, %struct.LineBreakProperties** %5, align 8
  %12 = call i32 @get_char_lb_class(i32 %10, %struct.LineBreakProperties* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @LBP_XX, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18, %2
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @get_char_lb_class_default(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @get_char_lb_class(i32, %struct.LineBreakProperties*) #1

declare dso_local i32 @get_char_lb_class_default(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
